--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,5 +2,6 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - init: sampctl package init
-    command: sampctl p run
+  - before: brew install Southclaws/sampctl/sampctl
+    init: sampctl p ensure
+    command: sampctl p build
